Bug 289834 - Unexpected behavior when entering a schedule that has a changed amount and a transaction date later than the due date
Summary: Unexpected behavior when entering a schedule that has a changed amount and a ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-26 09:40 UTC by Cristian Oneț
Modified: 2011-12-26 12:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Use this file to go trough the steps to reproduce this bug (4.69 KB, application/x-kmymoney)
2011-12-26 09:40 UTC, Cristian Oneț
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2011-12-26 09:40:00 UTC
Created attachment 67113 [details]
Use this file to go trough the steps to reproduce this bug

Version:           git master (using KDE 4.7.3) 
OS:                Linux

When entering a schedule that:
1. Has some transaction data changed like the amount for example
2. The date was changed to be after the due date
3. The user selects 'Set all further occurrences in this schedule to be these values' while only the changed amount is displayed

After a schedule in the above conditions is entered the next dues date of the schedule is incorrectly set to the payment date of the transaction that was just entered.


Reproducible: Didn't try

Steps to Reproduce:
Use the attached file and enter schedule 'Salary' which is a monthly schedule due on '25.12.2011'.
1. Changed the amount to 110
2. Change the transaction date to '26.12.2011'
3. Enter the schedule and select 'Set all further occurrences in this schedule to be these values'


Actual Results:  
The transaction is entered and the next due date of the schedule is set to '26.12.2011' which is wrong since we've just entered the transaction for that date.

Expected Results:  
The transaction is entered and the next due date of the schedule is set to '25.01.2011' just like when we don't select 'Set all further occurrences in this schedule to be these values'

OS: Linux (x86_64) release 3.0.6-gentoo
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Cristian Oneț 2011-12-26 11:59:50 UTC
Git commit 711db3f349a34aab4e41a7609c71e7f626cd8605 by Cristian Oneț.
Committed on 26/12/2011 at 12:51.
Pushed by conet into branch 'master'.

When changing the transaction of a schedule keep the original due date.
Related: bug 289834

M  +3    -1    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/711db3f349a34aab4e41a7609c71e7f626cd8605
Comment 2 Cristian Oneț 2011-12-26 12:01:05 UTC
Git commit d7f91828b2f566cdb4da6bc378a17cdce14f45e6 by Cristian Oneț.
Committed on 26/12/2011 at 12:51.
Pushed by conet into branch '4.6'.

When changing the transaction of a schedule keep the original due date.
Related: bug 289834

M  +3    -1    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/d7f91828b2f566cdb4da6bc378a17cdce14f45e6