When changing the transaction of a schedule keep the original due date.

BUG: 289834