kmymoney/kmymoney.cpp
@@ -4450,7 +4450,9 @@ KMyMoneyUtils::EnterScheduleResultCodeE KMyMoneyApp::enterSchedule(MyMoneySchedu
                 break;
 
               case KConfirmManualEnterDlg::ModifyAlways:
-                schedule.setTransaction(taccepted);
+                torig = taccepted;
+                torig.setPostDate(origDueDate);
+                schedule.setTransaction(torig);
                 break;
 
               case KConfirmManualEnterDlg::ModifyOnce:
